# librime-rs

./: .gitignore  Cargo.toml  README.md
src/: candidate.rs  common.rs  deployer.rs  lib.rs  message.rs  translation.rs
src/algo/: algobra.rs  calculus.rs  dynamics.rs  encoder.rs  filesystem.rs  mod.rs  spelling.rs  syllabifier.rs  utilities.rs
src/config/: auto_patch_config_plugin.rs  config_types.rs  mod.rs
src/dict/: corrector.rs  mapped_file.rs  mod.rs  prism.rs
src/gear/: charset_filter.rs  mod.rs
src/lever/: custom_settings.rs  mod.rs
src/tests/: algo.rs  candidate.rs  mod.rs
